--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2666,6 +2666,44 @@
 					z-index: 2;
 				}
 
+				.tiles article > .photo {
+					-moz-transition: -moz-transform 0.5s ease;
+					-webkit-transition: -webkit-transform 0.5s ease;
+					-ms-transition: -ms-transform 0.5s ease;
+					transition: transform 0.5s ease;
+					position: relative;
+					display: block;
+					width: 100%;
+					border-radius: 4px;
+					overflow: hidden;
+				}
+
+					.tiles article > .photo img {
+						display: block;
+						width: 100%;
+					}
+
+					.tiles article > .photo:before {
+						-moz-pointer-events: none;
+						-webkit-pointer-events: none;
+						-ms-pointer-events: none;
+						pointer-events: none;
+						-moz-transition: background-color 0.5s ease, opacity 0.5s ease;
+						-webkit-transition: background-color 0.5s ease, opacity 0.5s ease;
+						-ms-transition: background-color 0.5s ease, opacity 0.5s ease;
+						transition: background-color 0.5s ease, opacity 0.5s ease;
+						content: '';
+						display: block;
+						position: absolute;
+						top: 0;
+						left: 0;
+						width: 100%;
+						height: 100%;
+						opacity: 1.0;
+						z-index: 1;
+						opacity: 0.8;
+					}
+
 			.tiles article > a {
 				display: -moz-flex;
 				display: -webkit-flex;
