--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2700,7 +2700,7 @@
 						width: 100%;
 						height: 100%;
 						opacity: 1.0;
-						z-index: 1;
+						/*z-index: 1;*/
 						opacity: 0.8;
 					}
 
