--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2888,6 +2888,42 @@
 
 		}
 
+/* Containers */
+
+.container {
+  max-width: 736px;
+}
+
+section.header {
+  margin-top: 4rem;
+  text-align: center;
+}
+
+section.content {
+  text-align: center;
+}
+
+.value-img {
+  display: block;
+  text-align: center;
+  margin: 2em 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+@media (min-width: 550px) {
+  .header {
+    margin-top: 10rem;
+  }
+}
+
+.button.button-primary {
+  background-color: #ce7338 !important;
+  border-color: #ce7338 !important;
+}
+
 /* Header */
 
 	#header {
