--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2768,15 +2768,15 @@
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #2A4C8B;
+				background-color: #f2849e;
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #2A4C8B;
+				background-color: #7ecaf6;
 			}
 
 			.tiles article.style3 > .image:before {
-				background-color: #2A4C8B;
+				background-color: #7bd0c1;
 			}
 
 			.tiles article.style4 > .image:before {
