--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2768,17 +2768,17 @@
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #f2849e;
+				background-color: #4D4D4D;
 			}
-
+/*#f2849e*/
 			.tiles article.style2 > .image:before {
-				background-color: #7ecaf6;
+				background-color: #4D4D4D;
 			}
-
+/*#7ecaf6*/
 			.tiles article.style3 > .image:before {
-				background-color: #7bd0c1;
+				background-color: #4D4D4D;
 			}
-
+/*#7bd0c1*/
 			.tiles article.style4 > .image:before {
 				background-color: #c75b9b;
 			}
