--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2888,7 +2888,7 @@
 
 		}
 
-/* Containers
+/* Containers */
 
 .container {
   max-width: 736px;
@@ -2923,7 +2923,7 @@ img {
   background-color: #ce7338 !important;
   border-color: #ce7338 !important;
 }
-*/
+
 
 /* Header */
 
